--- a/src/views/style.css
+++ b/src/views/style.css
@@ -1,130 +1,128 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Roboto;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Roboto;
 }
 a {
-    text-decoration: none;
-    color: #2b2b2b;
+  text-decoration: none;
+  color: #2b2b2b;
 }
 .navbar {
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    background-color: #f80000;
-    position: sticky;
-    top: 0;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  background-color: #f80000;
+  position: sticky;
+  top: 0;
 }
 .navbar ul {
-    display: flex;
-    list-style: none;
-    margin: 20px 0;
+  display: flex;
+  list-style: none;
+  margin: 20px 0;
 }
 .navbar ul li {
-    font-family: Roboto, serif;
-    font-size: 1.1rem;
+  font-family: Roboto, serif;
+  font-size: 1.1rem;
 }
 .navbar ul li a {
-    text-decoration: none;
-    color: white;
-    padding: 8px 25px;
-    transition: all .5s ease;
+  text-decoration: none;
+  color: white;
+  padding: 8px 25px;
+  transition: all 0.5s ease;
 }
 #home {
-    display: flex;
-    flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.2);
-    height: 1000px;
-    justify-content: center;
-    align-items: center;
-    color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(0, 0, 0, 0.2);
+  height: 1000px;
+  justify-content: center;
+  align-items: center;
+  color: #ffffff;
 }
 #home::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    background: url("bz.jpg") no-repeat center center/cover;
-    height: 900px;
-    width:500px;
-    z-index: -2;
-    opacity: .8;
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: url("bz.jpg") no-repeat center center/cover;
+  height: 900px;
+  width: 500px;
+  z-index: -2;
+  opacity: 0.8;
 }
 .main {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 .headings {
-    font-family: Roboto, serif;
-    font-size: 3rem;
-    text-align: center;
-    margin: 40px 0;
+  font-family: Roboto, serif;
+  font-size: 3rem;
+  text-align: center;
+  margin: 40px 0;
 }
 h2.headings {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 .btn {
-    padding: 10px 35px;
-    background-color: transparent;
-    border: 1px solid #ffffff;
-    outline: none;
-    transition: .6s ease;
-    border-radius: 15px;
+  padding: 10px 35px;
+  background-color: transparent;
+  border: 1px solid #ffffff;
+  outline: none;
+  transition: 0.6s ease;
+  border-radius: 15px;
 }
 #services {
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
 }
 .row {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    box-sizing: border-box;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  box-sizing: border-box;
 }
 .box {
-    display: flex;
-    flex-direction: column;
-    width: 350px;
-    height: 250px;
-    border: 1px solid #ffffff;
-    margin: 10px;
-    align-items: center;
-    text-align: justify;
-    border-radius: 15px;
-    background: linear-gradient(to top, #c9c9c9 50%, white 50%);
-    background-size: 100% 200%;
-    transition: all .8s;
+  display: flex;
+  flex-direction: row;
+  width: 350px;
+  height: 250px;
+  border: 1px solid #ffffff;
+  margin: 10px;
+  align-items: center;
+  text-align: center;
+  border-radius: 15px;
+  background: linear-gradient(to top, #c9c9c9 50%, white 50%);
+  background-size: 100% 200%;
+  transition: all 0.8s;
 }
 .box:hover {
-    background-position: left bottom;
-    color: white;
-    border: none;
-    box-shadow: 0 0 20px #2b2b2b;
+  background-position: left bottom;
+  color: white;
+  border: none;
+  box-shadow: 0 0 20px #2b2b2b;
 }
 .form {
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    align-items: center;
-    margin: 20px 0;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  align-items: center;
+  margin: 20px 0;
 }
 #send {
-    width: 8rem;
-    height: 8rem;
-    margin: 40px;
-    border: none;
-    outline: none;
-    border-radius: 200px;
+  width: 8rem;
+  height: 8rem;
+  margin: 40px;
+  border: none;
+  outline: none;
+  border-radius: 200px;
 }
 #send:hover {
-    cursor: pointer;
-    box-shadow: 0 0 10px white;
+  cursor: pointer;
+  box-shadow: 0 0 10px white;
 }
-input[type="submit"]{
-    text-align: center;
-    font-size:80px;
+input[type="submit"] {
+  text-align: center;
+  font-size: 80px;
 }
-
-    
