--- a/src/views/location/location.page
+++ b/src/views/location/location.page
@@ -1,40 +1,36 @@
-<link rel="stylesheet" href="/views/location/location.css">
-<link rel="stylesheet" href="/views/style.css">
+<link rel="stylesheet" href="/views/location/location.css" />
+<link rel="stylesheet" href="/views/style.css" />
 <!-- TODO ADD YOUR MARKUP HERE -->
 <nav class="navbar">
-    <ul>
-        <li><a href="#home">Yelp 2.0</a></li>
-    </ul>
+  <ul>
+    <li><a href="#home">Yelp 2.0</a></li>
+  </ul>
 </nav>
-<section id="Map">
-</section>
+<section id="Map"></section>
 <section id="services">
-    <h1 class="headings"></h1>
-    <div class="row">
-        <a href="/reviews/?locationNow={{location}}">
-            <div class="box">
-                <h1 class="headings">Linz</h1>
-
-            </div>
-        </a>
-        
-        <a href="/reviews/?locationNow=Wien">
-            <div class="box">
-                <h1 class="headings">Wien</h1>
-            </div>
-        </a>
-        <a href="/reviews/?locationNow=Riga">
-            <div class="box">
-                <h1 class="headings">Riga</h1>
-            </div>
-        </a>
-    </div>
+  <h1 class="headings"></h1>
+  <div class="row">
+      
+    <a class="box" *for="locationdata in locations" href="/reviews/?locationNow={{ locationdata.id }}" ><div class="box"><h1 class="headings">{{locationdata.location}}</h1></div></a *endFor>
+    <!-- <h1 class="headings">{{ name }}</h1> -->
+<!--
+    <a href="/reviews/?locationNow=Wien">
+      <div class="box">
+        <h1 class="headings">Wien</h1>
+      </div>
+    </a>
+    <a href="/reviews/?locationNow=Riga">
+      <div class="box">
+        <h1 class="headings">Riga</h1>
+      </div>
+    </a> 
+  -->
+  </div>
 </section>
 <section id="contact">
-    <h1 class="headings"></h1>
-    <form action="" class="form">
-        <label>
-        </label>
-        <input type="submit" value="+" id="send">
-    </form>
+  <h1 class="headings"></h1>
+  <form action="" class="form">
+    <label> </label>
+    <input type="submit" value="+" id="send" />
+  </form>
 </section>
