--- a/src/views/reviews/reviews.page
+++ b/src/views/reviews/reviews.page
@@ -1,11 +1,12 @@
-<link rel="stylesheet" href="/views/location/location.css">
 <link rel="stylesheet" href="/views/style.css">
+<link rel="stylesheet" href="/views/reviews/reviews.css">
+
 <!-- TODO ADD YOUR MARKUP HERE -->
 
 
-<label for="destination">{{ locationNow }}</label><br />
+<!--<label for="destination">{{ locationNow }}</label><br />
 
-<div>{{ score }}</div>
+<div>{{ score }}</div>-->
 
 
 <nav class="navbar">
@@ -18,9 +19,22 @@
 <section id="services">
     <a href="/location/"><h1 class="headings">{{ locationNow }}</h1></a>
     <div class="row">
-        
         <div class="box">
             <h2 class="headings">Restaurant Muto</h1>
+            <form>
+                <fieldset class="rate">
+                    <input type="radio" id="rating10" name="rating" value="10" /><label for="rating10" title="5 stars"></label>
+                    <input type="radio" id="rating9" name="rating" value="9" /><label class="half" for="rating9" title="4 1/2 stars"></label>
+                    <input type="radio" id="rating8" name="rating" value="8" /><label for="rating8" title="4 stars"></label>
+                    <input type="radio" id="rating7" name="rating" value="7" /><label class="half" for="rating7" title="3 1/2 stars"></label>
+                    <input type="radio" id="rating6" name="rating" value="6" /><label for="rating6" title="3 stars"></label>
+                    <input type="radio" id="rating5" name="rating" value="5" /><label class="half" for="rating5" title="2 1/2 stars"></label>
+                    <input type="radio" id="rating4" name="rating" value="4" /><label for="rating4" title="2 stars"></label>
+                    <input type="radio" id="rating3" name="rating" value="3" /><label class="half" for="rating3" title="1 1/2 stars"></label>
+                    <input type="radio" id="rating2" name="rating" value="2" /><label for="rating2" title="1 star"></label>
+                    <input type="radio" id="rating1" name="rating" value="1" /><label class="half" for="rating1" title="1/2 star"></label>
+                </fieldset>
+            </form>
         </div>
         <div class="box">
             <h2 class="headings">Gelbes Krokodil</h1>
@@ -30,11 +44,8 @@
         </div>
     </div>
 </section>
-<section id="contact">
-    <h1 class="headings"></h1>
+<section id="add">
     <form action="" class="form">
-        <label>
-        </label>
         <input type="submit" value="+" id="send">
     </form>
 </section>
