--- a/src/views/location/location.page
+++ b/src/views/location/location.page
@@ -12,7 +12,7 @@
   <h1 class="headings"></h1>
   <div class="row">
       
-    <a *for="locationdata in locations" href="/reviews/?locationNow={{ locationdata.id }}" ><div class="box"><h1 class="headings">{{locationdata.location}}</h1></div></a *endFor>
+    <a *for="locationdata in locations" href="/reviews/?locationNow={{ locationdata.location }}" ><div class="box"><h1 class="headings">{{locationdata.location}}</h1></div></a *endFor>
     <!-- <h1 class="headings">{{ name }}</h1> -->
 <!--
     <a href="/reviews/?locationNow=Wien">
