--- a/src/views/style.css
+++ b/src/views/style.css
@@ -91,7 +91,7 @@ h2.headings {
   border: 1px solid #2b2b2b;
   margin: 10px;
   align-items: center;
-  text-align: center;
+  justify-content: center;
   border-radius: 15px;
   background: linear-gradient(to top, #c9c9c9 50%, white 50%);
   background-size: 100% 200%;
@@ -122,53 +122,56 @@ input[type="submit"] {
 }
 
 body {
-    margin: 5%; 
-    text-align: center;
-    background: #111;
-    color: #333; 
+  margin: 5%;
+  text-align: center;
+  background: #111;
+  color: #333;
 }
 h1 {
-    font-size: 2em; 
-    margin-bottom: .5rem;
+  font-size: 2em;
+  margin-bottom: 0.5rem;
 }
 
 /* Ratings widget */
 .rate {
-    display: inline-block;
-    border: 0;
+  display: inline-block;
+  border: 0;
 }
 /* Hide radio */
 .rate > input {
-    display: none;
+  display: none;
 }
 /* Order correctly by floating highest to the right */
 .rate > label {
-    float: right;
-    color: #c9c9c9;
+  float: right;
+  color: #c9c9c9;
 }
 /* The star of the show */
 .rate > label:before {
-    display: inline-block;
-    font-size: 2rem;
-    padding: .3rem .2rem;
-    margin: 0;
-    cursor: pointer;
-    font-family: FontAwesome;
-    content: "\f005 "; /* full star */
+  display: inline-block;
+  font-size: 2rem;
+  padding: 0.3rem 0.2rem;
+  margin: 0;
+  cursor: pointer;
+  font-family: FontAwesome;
+  content: "\f005 "; /* full star */
 }
 
 /* Half star trick */
 .rate .half:before {
-    content: "\f089 "; /* half star no outline */
-    position: absolute;
-    padding-right: 0;
+  content: "\f089 "; /* half star no outline */
+  position: absolute;
+  padding-right: 0;
 }
 /* Click + hover color */
 input:checked ~ label, /* color current and previous stars on checked */
-label:hover, label:hover ~ label { color: gold;  } /* color previous stars on hover */
+label:hover, label:hover ~ label {
+  color: gold;
+} /* color previous stars on hover */
 
 /* Hover highlights */
 input:checked + label:hover, input:checked ~ label:hover, /* highlight current and previous stars */
 input:checked ~ label:hover ~ label, /* highlight previous selected stars for new rating */
-label:hover ~ input:checked ~ label /* highlight previous selected stars */ { color: gold;  }
-    
+label:hover ~ input:checked ~ label /* highlight previous selected stars */ {
+  color: gold;
+}
